# GL

./: .gitignore  Automaton.cpp  Automaton.h  CMakeLists.txt  Lexer.cpp  Lexer.h  Makefile  README.md  exceptions.h  expressions_regulieres.txt  lut  lut.creator.user.2fc7e56  lut.files  lut.includes  main.cpp  symbolTypes.h
Symbols/: Line.cpp  Line.h  Read.cpp  Read.h  Symbol.cpp  Symbol.h  Symbol.h.gch
Symbols/Nonterminaux/: AffectConst.cpp  AffectConst.h  AffectInstruct.cpp  AffectInstruct.h  AffectVarDeclare.cpp  AffectVarDeclare.h  BinaryExpression.cpp  BinaryExpression.h  Constant.cpp  Constant.h  DivideExpression.cpp  DivideExpression.h  Expression.cpp  Expression.h  MinusExpression.cpp  MinusExpression.h  MultiplyExpression.cpp  MultiplyExpression.h  Number.cpp  Number.h  OpA.cpp  OpA.h  OpM.cpp  OpM.h  Parenthesis.cpp  Parenthesis.h  PlusExpression.cpp  PlusExpression.h  Read.cpp  Read.h  StockageUnit.cpp  StockageUnit.h  VarDeclare.cpp  VarDeclare.h  Variable.cpp  Variable.h  Write.cpp  Write.h
Symbols/Terminaux/: AffectDeclareTerminal.cpp  AffectDeclareTerminal.h  AffectInstructTerminal.cpp  AffectInstructTerminal.h  Coma.cpp  Coma.h  Comma.cpp  Comma.h  ConstTerminal.cpp  ConstTerminal.h  DivideTerminal.cpp  DivideTerminal.h  Dollar.cpp  Dollar.h  IdTerminal.cpp  IdTerminal.h  MinusTerminal.cpp  MinusTerminal.h  MultiplyTerminal.cpp  MultiplyTerminal.h  ParenthesisTerminal.cpp  ParenthesisTerminal.h  PlusTerminal.cpp  PlusTerminal.h  ReadTerminal.cpp  ReadTerminal.h  Semicolon.cpp  Semicolon.h  SyntaxError.cpp  SyntaxError.h  VarTerminal.cpp  VarTerminal.h  WriteTerminal.cpp  WriteTerminal.h
Tests/: results.csv
Tests/01.NoArgument/: results.csv
Tests/02.FichierInexistant/: results.csv
Tests/03.FichierExistant/: results.csv
Tests/04.Affichage/: results.csv
Tests/05.1.DoubleDeclaration/: stderr.out
Tests/05.2.UtiliseAvantAff/: run  stderr.out
Tests/05.3.NonDeclaree/: run  stderr.out
Tests/05.DoubleDeclaration/: results.csv
Tests/06.1.AnalyseStatique/: results.csv  stderr.out
Tests/06.2.AnalyseStatique/: stderr.out
Tests/06.3.AnalyseStatique/: results.csv
Tests/06.4.AnalyseStatique/: results.csv
Tests/07.Execution/: results.csv  std.out
Tests/08.1.Optimisation/: results.csv
Tests/08.2.Optimisation/: results.csv
Tests/08.3.Optimisation/: description  run
Tests/08.3.OptimisationDescVar/: std.out
Tests/08.4.OptimisationExpressPar/: description  run  std.out
Tests/09.ErreurLexicale/: results.csv  std.out  stderr.out
Tests/10.ErreurSyntaxique/: results.csv  stderr.out
Tests/11.DivisionZero/: description  run  stderr.out
Tests/12.DivisionZeroOpti/: run  stderr.out
Tests/13.ExpressionsArithmetiques/: description  run  std.out
Tests/14.ExpressionsParenthesees/: description  run
Tests/files/: correct_variable.lt  div_zero_brut.lt  div_zero_exec_opti.lt  doubleParenthesis.lt  redond_par.lt  testAffects.lt  testTropStyle.lt  test_parenth.lt  testpapin.lt
states/: DefaultState.cpp  DefaultState.h  E0.cpp  E0.h  E1.cpp  E1.h  E10.cpp  E10.h  E11.cpp  E11.h  E12.cpp  E12.h  E13.cpp  E13.h  E14.cpp  E14.h  E15.cpp  E15.h  E16.cpp  E16.h  E17.cpp  E17.h  E18.cpp  E18.h  E19.cpp  E19.h  E2.cpp  E2.h  E20.cpp  E20.h  E21.cpp  E21.h  E22.cpp  E22.h  E23.cpp  E23.h  E24.cpp  E24.h  E25.cpp  E25.h  (+59 more)
